Add content reporting to privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -100,6 +100,7 @@
         <li><strong>Search queries:</strong> When you search or use Inspire Me, your query and relevant profile context (role, interests, preferences) are sent through our server to a third-party AI service to generate wisdom results. We do not store your queries on our servers unless you have opted into anonymous data sharing (see below).</li>
         <li><strong>Anonymous quality analytics (opt-in):</strong> If you enable "Share anonymous usage data" in Settings, we collect anonymous quality metrics to improve our AI results. This includes: your search query text, quality scores for the AI response, the types and categories of wisdom returned, the AI model used, and response speed. This data contains no personal identifiers — no user ID, no profile text, no device information. You can opt out at any time in Settings, and collection stops immediately.</li>
         <li><strong>Feature votes:</strong> If you vote on future features in Shape Invoke, your vote allocations are sent to our server and stored anonymously. No personal information is attached to votes.</li>
+        <li><strong>Content reports:</strong> If you report an issue with a wisdom result (such as a wrong attribution or inaccurate content), the report details are sent to our server and stored anonymously to help us improve content quality. No personal information is attached to reports.</li>
     </ul>
 
     <p><strong>Data we do NOT collect:</strong></p>
@@ -115,14 +116,14 @@
     <ul>
         <li><strong>Third-party AI providers</strong> — Process your search queries to generate wisdom results. The specific AI provider may change over time.</li>
         <li><strong>Vercel</strong> — Hosts our server that routes requests to AI providers. Subject to <a href="https://vercel.com/legal/privacy-policy" target="_blank">Vercel's Privacy Policy</a>.</li>
-        <li><strong>Upstash</strong> — Stores anonymous feature vote data and, for opted-in users, anonymous quality analytics data. Subject to <a href="https://upstash.com/trust/privacy.html" target="_blank">Upstash's Privacy Policy</a>.</li>
+        <li><strong>Upstash</strong> — Stores anonymous feature votes, content reports, and (for opted-in users) anonymous quality analytics data. Subject to <a href="https://upstash.com/trust/privacy.html" target="_blank">Upstash's Privacy Policy</a>.</li>
     </ul>
 
     <h2>AI-Generated Content</h2>
     <p>Invoke Wisdom uses artificial intelligence to find and present quotes, stories, and principles. While we work to ensure quality and accuracy, AI-generated content may contain errors or inaccuracies. Quotes and attributions should be independently verified before use in formal or published contexts.</p>
 
     <h2>Data Retention and Deletion</h2>
-    <p>Since your data is stored locally on your device, you have full control over it. You can delete all your data at any time using the "Delete All My Data" option in the App's settings. Uninstalling the App also removes all local data. Anonymous feature votes stored on our server cannot be linked back to you and are retained indefinitely in aggregate form.</p>
+    <p>Since your data is stored locally on your device, you have full control over it. You can delete all your data at any time using the "Delete All My Data" option in the App's settings. Uninstalling the App also removes all local data. Anonymous feature votes and content reports stored on our server cannot be linked back to you and are retained indefinitely in aggregate form.</p>
 
     <h2>Children's Privacy</h2>
     <p>Invoke Wisdom is not directed at children under 13. We do not knowingly collect personal information from children under 13. If you believe a child under 13 has provided us with personal information, please contact us and we will delete it.</p>
