Fix mangled email links on all pages

--- a/privacy.html
+++ b/privacy.html
@@ -135,4 +135,10 @@
     <p>We may update this Privacy Policy from time to time. Changes will be posted on this page with an updated effective date. Continued use of the App after changes constitutes acceptance of the updated policy.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have questions about this Privacy Policy, contact us at <a href="/cdn-cgi/l/email-protection#b5c6c0c5c5dac7c1f5dcdbc3daded0c2dcc6d1dad89bd4c5c5"><span class="__cf_email__" data-cfemail="64171114140b1610240d0a120b0f01130d17000b094a051414">[email&#16
+    <p>If you have questions about this Privacy Policy, contact us at <a href="mailto:support@invokewisdom.app">support@invokewisdom.app</a>.</p>
+
+    <div class="footer">
+        <p>&copy; 2026 Invoke Wisdom. All rights reserved.</p>
+    </div>
+</body>
+</html>
