--- a/terms.html
+++ b/terms.html
@@ -131,4 +131,10 @@
     <p>We may update these Terms from time to time. Changes will be posted on this page with an updated effective date. Continued use of the App after changes constitutes acceptance of the updated Terms.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have questions about these Terms, contact us at <a href="/cdn-cgi/l/email-protection#d7a4a2a7a7b8a5a397beb9a1b8bcb2a0bea4b3b8baf9b6a7a7"><span class="__cf_email__" data-cfemail="22515752524d5056624b4c544d4947554b51464d4f0c435252">[email&#16
+    <p>If you have questions about these Terms, contact us at <a href="mailto:support@invokewisdom.app">support@invokewisdom.app</a>.</p>
+
+    <div class="footer">
+        <p>&copy; 2026 Invoke Wisdom. All rights reserved.</p>
+    </div>
+</body>
+</html>
