--- a/support.html
+++ b/support.html
@@ -83,7 +83,7 @@
     <p class="subtitle">We're here to help.</p>
 
     <h2>Contact Us</h2>
-    <p>For questions, feedback, or issues with Invoke Wisdom, email us at <a href="/cdn-cgi/l/email-protection#94e7e1e4e4fbe6e0d4fdfae2fbfff1e3fde7f0fbf9baf5e4e4"><span class="__cf_email__" data-cfemail="295a5c5959465b5d6940475f46424c5e405a4d464407485959">[email&#160;protected]</span></a>. We typically respond within 48 hours.</p>
+    <p>For questions, feedback, or issues with Invoke Wisdom, email us at <a href="mailto:support@invokewisdom.app">support@invokewisdom.app</a>. We typically respond within 48 hours.</p>
 
     <h2>Frequently Asked Questions</h2>
 
@@ -100,4 +100,10 @@
     <p>Invoke Wisdom includes a daily search limit to manage costs and ensure service quality. The limit resets each day.</p>
 
     <p><strong>How do I share feedback or feature ideas?</strong></p>
-    <p>Use the "Shape Invoke" section in Settings to vote on upcoming features, or email us directly at <a href="/cdn-cgi/l/email-protection#9be8eeebeb
+    <p>Use the "Shape Invoke" section in Settings to vote on upcoming features, or email us directly at <a href="mailto:support@invokewisdom.app">support@invokewisdom.app</a>.</p>
+
+    <div class="footer">
+        <p>&copy; 2026 Invoke Wisdom. All rights reserved.</p>
+    </div>
+</body>
+</html>
