Fix email links, add support nav, update landing copy

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h1>Invoke Wisdom</h1>
     <p class="subtitle">Wisdom for every challenge.</p>
 
-    <p>Invoke Wisdom helps you find the right quote, story, or principle for whatever you're facing. Powered by AI, grounded in timeless wisdom.</p>
+    <p>Invoke Wisdom helps you find the right quote, story, or principle for whatever you're facing — whether you're preparing for a difficult conversation, leading a team through change, or simply looking for a fresh perspective. Powered by AI, grounded in timeless wisdom from history, philosophy, science, business, and beyond.</p>
 
     <p>Available on the App Store for iPhone.</p>
 
