--- a/support.html
+++ b/support.html
@@ -77,6 +77,7 @@
         <a href="/">Home</a>
         <a href="/privacy">Privacy</a>
         <a href="/terms">Terms</a>
+        <a href="/support">Support</a>
     </div>
 
     <h1>Support</h1>
@@ -91,7 +92,7 @@
     <p>Yes. Your profile, saved items, and search history are stored locally on your device. We don't create user accounts and don't track you personally. If you opt into anonymous data sharing, we collect quality metrics about AI results (including your search query text) to improve the App — but this data contains no personal identifiers and you can opt out at any time. See our <a href="/privacy">Privacy Policy</a> for full details.</p>
 
     <p><strong>Are the quotes accurate?</strong></p>
-    <p>Invoke Wisdom uses AI to find and present wisdom. While we optimize for accuracy, AI-generated content may contain errors or misattributions. We recommend verifying quotes before using them in formal or published contexts.</p>
+    <p>Invoke Wisdom uses AI to find and present wisdom. While we optimize for accuracy, AI-generated content may contain errors or misattributions. We recommend verifying quotes before using them in formal or published contexts. Further, there is a "Report an Issue" menu option on our detail page to report an errors you encounter. These reports are logged and used going forward to improve overall results for everyone. </p>
 
     <p><strong>How do I delete my data?</strong></p>
     <p>Go to Settings in the App and tap "Delete All My Data." This removes all your saved items, profile information, and search history. Uninstalling the App also removes all local data.</p>
