--- a/privacy.html
+++ b/privacy.html
@@ -77,6 +77,7 @@
         <a href="/">Home</a>
         <a href="/privacy">Privacy</a>
         <a href="/terms">Terms</a>
+        <a href="/support">Support</a>
     </div>
 
     <h1>Privacy Policy</h1>
